프로젝트 구조 변경 및 spot 코드 일부 가져오기

--- a/src/main/resources/review/review-list.html
+++ b/src/main/resources/review/review-list.html
@@ -15,7 +15,7 @@
     </thead>
     <tbody>
     <tr th:each="question : ${reviewList}">
-        <td th:text="${review.subject}"></td>
+        <td th:text="${review.title}"></td>
         <td th:text="${review.createDate}"></td>
     </tr>
     </tbody>
